ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__DynamicReport__c/CnP_PaaS__DynamicReport__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Dynamic Report</label>
    <nameField>
        <label>Dynamic report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Dynamic Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>