ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__DynamicReport__c/fields/CnP_PaaS__application_name__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__application_name__c</fullName>
    <label>application name</label>
    <type>TextArea</type>
</CustomField>