ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__DynamicReport__c/fields/CnP_PaaS__query__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__query__c</fullName>
    <label>query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>