ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__DynamicReport__c/fields/CnP_PaaS__Report_Name__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Report_Name__c</fullName>
    <label>Report Name</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>